src/objects/Academy_Prework__c.object
<CustomObject>
    <fields>
        <fullName>Content_Link__c</fullName>
        <label>Content Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Status__c</fullName>
        <label>Content_Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exercise_Link__c</fullName>
        <label>Exercise Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exercise_Status__c</fullName>
        <label>Exercise Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pct_Complete__c</fullName>
        <formula>((Content_Status__c + Video_Status__c + Exercise_Status__c) / 5)*100</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pct Complete</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Verified by Professor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject_Area__c</fullName>
        <label>Subject Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Application Design</fullName>
                </value>
                <value>
                    <fullName>Portals</fullName>
                </value>
                <value>
                    <fullName>Sharing Model &amp; Security</fullName>
                </value>
                <value>
                    <fullName>Single Sign On</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Apex &amp; Visualforce</fullName>
                </value>
                <value>
                    <fullName>Large Data Volumes</fullName>
                </value>
                <value>
                    <fullName>Deployment &amp; Release Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Recording_Link__c</fullName>
        <label>Video Recording Link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Status__c</fullName>
        <label>Video Status</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Academy Prework</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APW-{00000}</displayFormat>
        <label>Academy Prework Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Academy Prework</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>